--- a/src/components/form/display/index.less
+++ b/src/components/form/display/index.less
@@ -1,3 +1,19 @@
 .display-container {
+
     // background-color: white;
+    .weather-img-container {
+        width: 100%;
+
+        img {
+            width: 60%;
+        }
+    }
+
+    .weather-info {
+        display: flex;
+    }
+
+    .error {
+        margin-top: 20px;
+    }
 }
