--- a/src/components/form/index.css
+++ b/src/components/form/index.css
@@ -4,18 +4,15 @@
   flex-direction: column;
   background: white;
   border-radius: 10px;
+  width: 350px;
 }
 .input-container .navbar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
   padding: 0px;
   width: 100%;
 }
 .input-container .navbar-search {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   padding: 25px;
   border: 1px solid #bfc8e6;
@@ -34,4 +31,7 @@
   padding: 10px 0;
   font-size: larger;
   font-weight: bold;
+}
+.input-container .navbar svg {
+  cursor: pointer;
 }
