--- a/src/components/form/index.less
+++ b/src/components/form/index.less
@@ -4,18 +4,15 @@
   flex-direction: column;
   background: white;
   border-radius: 10px;
+  width: 350px;
 
   .navbar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
     padding: 0px;
     width: 100%;
 
     &-search {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       align-items: center;
       padding: 25px;
       border: 1px solid #bfc8e6;
@@ -36,6 +33,10 @@
       padding: 10px 0;
       font-size: larger;
       font-weight: bold;
+    }
+
+    svg {
+      cursor: pointer;
     }
   }
 }
